files are modified sucessfully

--- a/mob.html
+++ b/mob.html
@@ -176,4 +176,5 @@ EMI starts at ₹2,424. No Cost EMI available
                        </div>
                        </div>
                     </div>
+                </div>
 </body>
