--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       <input  id="pass" type="password" placeholder="Enter your password.." required >
       </div>
       <div >
-        <button class="btn-grad"type="submit">SIGN IN</button>
+        <button class="btn-grad"type="login">SIGN IN</button>
         <button class="btn-grad"type="reset">CLEAR</button>
       </div>
      
